--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "webpack-s3-plugin": "^1.0.3"
   },
   "dependencies": {
+    "@material-ui/core": "^4.3.0",
     "history": "^4.7.2",
     "immutable": "^4.0.0-rc.12",
     "prop-types": "^15.7.2",
